2002-12-16  Philippe Elie  <phil.el@wanadoo.fr>

	* module/ia64/op_syscalls.c:
	* module/x86/hammer_op_syscalls.c:
	* module/x86/op_syscalls.c: u16 pid to u32, tested/compiled only with
	  32 bits x86

2002-12-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: minor fix
	* pp/derive_files.cpp: comment

2002-12-14  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/format_output.cpp:
	* pp/format_output.h:
	* pp/outsymbflag.h:
	* pp/opp_symbol.h: add an app_name field in file_location and
	  formater options for this field.

	* pp/profile_container.cpp:
	* pp/profile_container.h: add_samples() add app_name parameter

	* pp/oprofpp.cpp:
	* pp/op_to_source.cpp:
	* pp/op_time.cpp:
	* pp/op_time_options.cpp:
	* pp/op_time_options.h: honor app_name parameter. No user visible
	  change except for op_time -l when profiling with --separate-samples

	* doc/oprofile.1.in:
	* doc/oprofile.xml: update doc

2002-12-13  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: lots of fixes. Remove sysctl documentation
	  as its really an internal feature and was cluttering up
	  the user manual.
 
2002-12-13  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: some clarifications on timer interrupt 
 
2002-12-12  John Levon  <levon@movementarian.org>

	* opcontrol: set one_enabled if timer interrupt. No
	  behaviour change, but "safer"
 
2002-12-11  John Levon  <levon@movementarian.org>

	* pp/derive_files.h:
	* pp/op_time.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/opp_symbol.h:
	* pp/profile.h:
	* pp/profile_container.h:
	* utils/Makefile.am: small pedantries
 
2002-12-10  Will Cohen  <wcohen@redhat.com>

	* utils/op_dump_25: 
	* utils/opcontrol (do_dump): Correct TMPFILE.

2002-12-10  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_image.c (complete_dump): New.
	* libop/op_config.h (OP_DUMP_STATUS): New.
	* utils/op_dump_25: New file.
	* utils/Makefile.am: Add op_dump_25.
	* utils/opcontrol (do_dump): Revise how dump performed.
